--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,44 +1,68 @@
-    <div>
-        <h2 class="product-h2">100% natural</h2>
-        <h1>products</h1>
-        <ul>
-            <li>
-                <img class="produck-image" src="./images/product-icecream.png" alt="">
-                <h2 class="product-h2">ice cream</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione vel assumenda similique voluptates qui perferendis atque praesentium mollitia officiis modi incidunt adipisci harum sapiente est dicta tempora iste at?
-                </p>
-                <a href="">
-                    <svg class="produck-image">
-                        <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+<section class="products">
+    <div class="container">
+        <div class="products-title">
+            <h2 class="products-text-title">100% natural</h2>
+            <h1 class="products-main-title">products</h1>
+        </div>
+        <ul class="products-flex list">
+            <li class="products-list">
+                <div class="products-img">
+                    <img src="./images/product-icecream.png">
+                </div>
+                <div class="products-box-1">
+                    <h2 class="products-text-title-card">ice cream</h2>
+                    <svg class="product-cards-svg" width="6" height="6">
+                        <use href="./images/svg/dot.svg"></use>
                     </svg>
-                </a>
+                    <p class="product-cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et</p>
+                    <a href="">
+                        <svg class="product-cards-icon" width="40" height="40">
+                            <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                        </svg>
+                    </a>
+                </div>
             </li>
-            <li>
-                <img class="produck-image" src="./images/product-icecoffee.png" alt="">
-                <h2 class="product-h2">ice coffee</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione vel assumenda similique voluptates qui
-                    perferendis atque praesentium mollitia officiis modi incidunt adipisci harum sapiente est dicta tempora iste at?
-                </p>
-                <a href="">
-                    <svg class="produck-image">
-                        <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+            <li class="products-list">
+                <div class="products-img">
+                    <img src="./images/product-icecoffee.png">
+                </div>
+                <div class="products-box-2">
+                    <h2 class="products-text-title-card">ice coffee</h2>
+                    <svg class="product-cards-svg" width="6" height="6">
+                        <use href="./images/svg/dot.svg"></use>
                     </svg>
-                </a>
+                    <p class="product-cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt
+                        ut
+                        labore et</p>
+                    <a href="">
+                        <svg class="product-cards-icon" width="40" height="40">
+                            <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                        </svg>
+                    </a>
+                </div>
             </li>
-            <li>
-                <img class="produck-image" src="./images/product-milkshake.png" alt="">
-                <h2 class="product-h2">milkshakes</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, ratione vel assumenda similique voluptates qui
-                    perferendis atque praesentium mollitia officiis modi incidunt adipisci harum sapiente est dicta tempora iste at?
-                </p>
-                <a href="">
-                    <svg class="produck-image">
-                        <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+            <li class="products-list">
+                <div class="products-img">
+                    <img src="./images/product-milkshake.png">
+                </div>
+                <div class="products-box-3">
+                    <h2 class="products-text-title-card">milkshakes</h2>
+                    <svg class="product-cards-svg" width="6" height="6">
+                        <use href="./images/svg/dot.svg"></use>
                     </svg>
-                </a>
+                    <p class="product-cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt
+                        ut
+                        labore et</p>
+                    <a href="">
+                        <svg class="product-cards-icon" width="40" height="40">
+                            <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                        </svg>
+                    </a>
+                </div>
             </li>
         </ul>
     </div>
