--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,11 +1,14 @@
-.product-container {
-  margin: 0;
-  padding: 0;
-  height: auto;
+.products {
+  margin-top: 127px;
+  margin-bottom: 119px;
 }
 
-.product-h2 {
-  font-family: Titan One sans-serif;
+.products-title {
+  /*  padding-bottom: 49px; */
+}
+
+.products-text-title {
+  font-family: 'Titan One';
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
@@ -13,9 +16,86 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  color: $advanced-bg;
 }
 
-.produck-image {
-  width: 40px;
-  height: 40px;
+.products-text-title-card {
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $main-color;
+}
+
+.products-main-title {
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: $accent-color;
+}
+
+.products-list {
+  position: relative;
+  margin-top: 259px;
+}
+
+.products-img {
+  width: 337px;
+  height: 335px;
+  position: absolute;
+  bottom: 400px;
+}
+
+.products-box-1 {
+  background-color: $main-bg;
+  border-radius: 24px;
+  width: 329px;
+  height: 525px;
+  padding-top: 163px;
+  padding-right: 44px;
+  padding-left: 44px;
+}
+
+.products-box-2 {
+  background-color: $main-coffee;
+  border-radius: 24px;
+  width: 329px;
+  height: 525px;
+  padding-top: 163px;
+  padding-right: 44px;
+  padding-left: 44px;
+}
+
+.products-box-3 {
+  background-color: $green-color;
+  border-radius: 24px;
+  width: 329px;
+  height: 525px;
+  padding-top: 163px;
+  padding-right: 44px;
+  padding-left: 44px;
+}
+
+.product-cards-text {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.76;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: $main-color;
+}
+
+.products-flex {
+  display: flex;
+  justify-content: space-between;
 }
