--- a/src/partials/choose.html
+++ b/src/partials/choose.html
@@ -1,34 +1,36 @@
+<section class="back"></section>
+
 <section class="choose">
     <h2 class="choose-title">Почему нас выбирают</h2>
     <ol class="choose-list">
         <li class="choose-list-item">
             <h3 class="choose-list-subtitle">— 01</h3>
-            <p>Обучение в малых <span>командах</span></p>
+            <p class="choose-list-text">Обучение в малых <span>командах</span></p>
         </li>
     
         <li class="choose-list-item">
             <h3 class="choose-list-subtitle">— 02</h3>
-            <p>Визуализированные <span>конспекты</span></p>
+            <p class="choose-list-text">Визуализированные <span>конспекты</span></p>
         </li>
     
         <li class="choose-list-item">
             <h3 class="choose-list-subtitle">— 03</h3>
-            <p>Каждое занятие имеет <span>цель и конкретный</span> результат</p>
+            <p class="choose-list-text">Каждое занятие имеет <span>цель и конкретный</span> результат</p>
         </li>
     
         <li class="choose-list-item">
             <h3 class="choose-list-subtitle">— 04</h3>
-            <p>Реальные результаты преподавателя</p>
+            <p class="choose-list-text">Реальные результаты преподавателя</p>
         </li>
     
         <li class="choose-list-item">
             <h3 class="choose-list-subtitle">— 05</h3>
-            <p>Программа курса соответствует <span>требованиям МОН</span> Украины</p>
+            <p class="choose-list-text">Программа курса соответствует <span>требованиям МОН</span> Украины</p>
         </li>
     
         <li class="choose-list-item">
             <h3 class="choose-list-subtitle">— 06</h3>
-            <p>Набор команд по <span>уровням знаний</span></p>
+            <p class="choose-list-text">Набор команд по <span>уровням знаний</span></p>
         </li>
     </ol>
 </section>
