--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -1,6 +1,11 @@
+.back {
+  background-color: #ff6b09;
+  height: 1700px;
+}
+
 .choose {
   position: absolute;
-  top: 1643px;
+  top: 1645px;
   left: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -10,9 +15,17 @@
   box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
 
+.choose-list-text {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.428;
+}
+
 .choose-title {
   /* помістити вище секції на 30px */
   position: absolute;
+  left: 0;
   bottom: 100%;
   padding-bottom: 30px;
   margin: 0px;
@@ -27,24 +40,18 @@
 .choose-list-subtitle {
   color: #ff6b09;
   padding-bottom: 10px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 164.9%;
 }
 
 .choose-list-item {
   list-style-type: none; /* Убираем маркеры */
-
   margin-bottom: 20px;
-
   width: 216px;
-
   left: 50px;
   top: 5328px;
-
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.428;
-  letter-spacing: 0.08em;
 
   &:last-child {
     margin-bottom: 0px;
