--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,145 +1,179 @@
-<section class="section">
-    <div class="container">
-        <h2 class="rewievs title">Отзывы выпускников</h2>
+<section class="section section-reviews">
+  <div class="container-reviews">
+    <h2 class="reviews title">Отзывы выпускников</h2>
+    <!-- <button class="button-right" type="button">
+       <svg  class="icon-arrow">
+        <use href="./images/sprite.svg#Arrow-right"></use>
+      </svg>
+      <img src="./images/Arrow-right.svg" alt="Правая кнопка переключения">
+    </button>
 
-        <div class="container-reviews">
-          <div class="reviews-picture">
-            <picture>
-                <source
-                  srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x"
-                  type="image/webp"
-                />
-                <img class="photo"
-                  srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
-                  src="./images/Reviews/photo6.jpg"
-                  alt="Фотография создателя отзыва"
-                  width="150" height="150"
-                />
-              </picture>
+    <button class="button-left" type="button">
+      <svg  class="icon-arrow">
+        <use  href="./images/sprite.svg#Arrow-left"></use>
+      </svg>
+      <img src="./images/Arrow-left.svg" alt="Левая кнопка переключения">
+    </button>   -->
 
-              <svg class="logo-vk" width="30" height="30">
-                  <use href="./images/sprite.svg#Vk"></use>
-              </svg>
-            </div>
-            <div class="reviews-description">
-              <h2 class="title">Тоня Кучеровская</h2>
-
-                <p class="text" lang="ru">Выпуск 2015-го года, Національний університет біоресурсів
-                і природокористування України</p>
-                <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З
-                першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
-                справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи
-                страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a href="#" class="link-reviews">Читать дальше</a> </p>
+<!-- Слайдер 1 -->
+    <div class="slider">  
+      <div class="slider-item">
+        <div class="slider-photo">
+          <picture>
+            <source srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x" type="image/webp" />
+            <img class="photo" srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
+              src="./images/Reviews/photo6.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
+          </picture>
+      
+          <svg class="logo-vk" width="30" height="30">
+            <use href="./images/sprite.svg#Vk"></use>
+          </svg>
         </div>
-             </div>
+      
+        <div class="slider-description">
+          <h2 class="name">Тоня Кучеровская</h2>
+      
+          <p class="text" lang="ru">Выпуск 2015-го года, Національний університет біоресурсів
+            і природокористування України</p>
+          <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+            словниковий запас. З
+            першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
+            справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи
+            страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a href="#"
+              class="link-reviews">Читать дальше</a> </p>
+        </div>
+      </div>
+ 
+      
+<!-- Слайдер 2 -->
+<div class="slider-item">
+  <div class="slider-photo">
+    <picture>
+      <source srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x" type="image/webp" />
+      <img class="photo" srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
+        src="./images/Reviews/photo6.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
+    </picture>
 
-        <div class="container-icon">
-        <ul class="reviews list">
-          <li class="item">
-              <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo1.webp 1x , ./images/Reviews/photo1@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo1.jpg 1x, ./images/Reviews/photo1@2x.jpg 2x"
-                      src="./images/Reviews/photo1.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                  </picture>
-              </a>
-          </li>
-          <li class="item">
-              <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo2.webp 1x , ./images/Reviews/photo2@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo2.jpg 1x, ./images/Reviews/photo2@2x.jpg 2x"
-                      src="./images/Reviews/photo2.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                  </picture>
-              </a>
-          </li>
+    <svg class="logo-vk" width="30" height="30">
+      <use href="./images/sprite.svg#Vk"></use>
+    </svg>
+  </div>
 
-          <li class="item">
-            <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo3.webp 1x , ./images/Reviews/photo3@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo3.jpg 1x, ./images/Reviews/photo3@2x.jpg 2x"
-                      src="./images/Reviews/photo3.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                </picture>
-            </a>
-          </li>
+  <div class="slider-description">
+    <h2 class="name">Тоня Кучеровская</h2>
 
-          <li class="item">
-              <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo4.webp 1x , ./images/Reviews/photo4@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo4.jpg 1x, ./images/Reviews/photo4@2x.jpg 2x"
-                      src="./images/Reviews/photo4.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                  </picture>
-              </a>
-          </li>
+    <p class="text" lang="ru">Выпуск 2015-го года, Національний університет біоресурсів
+      і природокористування України</p>
+    <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+      словниковий запас. З
+      першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
+      справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи
+      страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a href="#"
+        class="link-reviews">Читать дальше</a> </p>
+  </div>
+</div>
+ 
 
-          <li class="item">
-              <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo5.webp 1x , ./images/Reviews/photo5@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo5.jpg 1x, ./images/Reviews/photo5@2x.jpg 2x"
-                      src="./images/Reviews/photo5.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                  </picture>
-              </a>
-          </li>
+<!-- Слайдер 3 -->
+<div class="slider-item">
+  <div class="slider-photo">
+    <picture>
+      <source srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x" type="image/webp" />
+      <img class="photo" srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
+        src="./images/Reviews/photo6.jpg" alt="Фотография создателя отзыва" width="150" height="150" />
+    </picture>
 
-          <li class="item">
-              <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
-                      src="./images/Reviews/photo6.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                  </picture>
-              </a>
-          </li>
+    <svg class="logo-vk" width="30" height="30">
+      <use href="./images/sprite.svg#Vk"></use>
+    </svg>
+  </div>
 
-          <li class="item">
-            <a class="link" href="">
-                <picture>
-                    <source
-                      srcset="./images/Reviews/photo7.webp 1x , ./images/Reviews/photo7@2x.webp 2x"
-                      type="image/webp"/>
-                    <img 
-                      srcset="./images/Reviews/photo7.jpg 1x, ./images/Reviews/photo7@2x.jpg 2x"
-                      src="./images/Reviews/photo7.jpg"
-                      alt="Фотография создателя отзыва"
-                      width="54" height="54"/>
-                  </picture>
-            </a>
+  <div class="slider-description">
+    <h2 class="name">Тоня Кучеровская</h2>
+
+    <p class="text" lang="ru">Выпуск 2015-го года, Національний університет біоресурсів
+      і природокористування України</p>
+    <p class="description-text">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+      словниковий запас. З
+      першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її
+      справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи
+      страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a href="#"
+        class="link-reviews">Читать дальше</a> </p>
+  </div>
+</div>
+</div>
+
+    <div class="container-icon">
+      <ul class="reviews list">
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo1.webp 1x , ./images/Reviews/photo1@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo1.jpg 1x, ./images/Reviews/photo1@2x.jpg 2x"
+                src="./images/Reviews/photo1.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
+        </li>
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo2.webp 1x , ./images/Reviews/photo2@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo2.jpg 1x, ./images/Reviews/photo2@2x.jpg 2x"
+                src="./images/Reviews/photo2.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
         </li>
 
-        </ul>
-      </div>
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo3.webp 1x , ./images/Reviews/photo3@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo3.jpg 1x, ./images/Reviews/photo3@2x.jpg 2x"
+                src="./images/Reviews/photo3.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
+        </li>
+
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo4.webp 1x , ./images/Reviews/photo4@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo4.jpg 1x, ./images/Reviews/photo4@2x.jpg 2x"
+                src="./images/Reviews/photo4.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
+        </li>
+
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo5.webp 1x , ./images/Reviews/photo5@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo5.jpg 1x, ./images/Reviews/photo5@2x.jpg 2x"
+                src="./images/Reviews/photo5.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
+        </li>
+
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo6.webp 1x , ./images/Reviews/photo6@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo6.jpg 1x, ./images/Reviews/photo6@2x.jpg 2x"
+                src="./images/Reviews/photo6.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
+        </li>
+
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo7.webp 1x , ./images/Reviews/photo7@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo7.jpg 1x, ./images/Reviews/photo7@2x.jpg 2x"
+                src="./images/Reviews/photo7.jpg" alt="Фотография создателя отзыва" width="54" height="54" />
+            </picture>
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>  
 </section>
