--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -1,47 +1,32 @@
-.container{
-    &-icon{
-         background-color: var(--primary-white-color);
-         .list{
-            display: flex;
-            justify-content: center;
-            .item{
-                margin-right: 10px;
-
-                @media screen and(min-width:768px) {
-                    margin-right: 30px;
-                }
-
-                &:last-child{
-                    margin-right: 0;
-                }
-            }
-    }}
-
-    &-reviews{
+.slider{
+    &-item{
         box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-       margin-left: auto;
-       margin-right: auto;
-
-       @media screen and (min-width:320px){
-        width:280px;
-        padding: 20px;
-        margin-bottom: 20px;}
-
-       @media screen and(min-width:768px){
-        width: 688px;
-        display: flex;
-        padding: 40px;
-        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        overflow: hidden;
+        @media screen and (min-width:320px){
+            width:280px;
+            padding: 20px;
+            margin-bottom: 20px;}
+    
+           @media screen and(min-width:768px){
+            width: 688px;
+            display: flex;
+            padding: 40px;
+            margin-bottom: 30px;
+        }
+           @media screen and(min-width:1344px){
+            width: 1090px;
+            justify-content: center;
+            padding: 50px;
+            margin-bottom: 40px;
+        }
     }
-    @media screen and(min-width:1344px){
-        width: 1090px;
-        justify-content: center;
-        padding: 50px;
-        margin-bottom: 40px;
-    }
+}
+     
         .link-reviews{
             color: var(--accent-color);
-            position: relative;
+            // position: relative;
             text-decoration-skip-ink: none;
 
         //     &::after{
@@ -62,65 +47,7 @@
         margin-top: 26.5px;
         margin-bottom: 26.5px;
     }
-    .text{
-        font-style: normal;
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 1.2;
-        letter-spacing: 0.08em;
 
-        color: var(--secondary-text-color);
-
-        margin: 0;
-        margin-bottom: 10px;
-
-        @media screen and(max-width: 767px){
-            text-align: center;
-            
-        }
-        @media screen and(min-width: 768px){
-            margin-bottom: 20px;
-        }
-
-        @media screen and(min-width:1344px){
-            font-size: 14px;
-        }
-    }
-    
-    .title{
-        color: var(--accent-color);
-        margin-bottom: 10px;
-        font-weight: 800;
-        font-size: 14px;
-        line-height: 1.2;
-
-        letter-spacing: 0.08em;
-
-        @media screen and(min-width:767px){
-            margin-bottom: 20px;
-            font-size: 20px;  
-        }
-        @media screen and(min-width:1344px){
-            margin-bottom: 30px;
-            font-size: 30px;
-            
-        }
-    }
-    .description-text{        
-        margin: 0;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 1.6;
-
-        @media screen and(min-width:1344px){
-            font-size: 18px;
-            line-height: 1.5;
-        }
-    }
-}
-   
-}
 
 .title{
     font-style: normal;
@@ -132,8 +59,6 @@
     margin: 0;
     margin-bottom: 20px;
 
-
-
     @media screen and(min-width:768px){
         font-size: 26px;
         margin-bottom: 30px;
@@ -141,25 +66,30 @@
 
     @media screen and(min-width:1344px){
         font-size: 46px;
-        margin-bottom: 40px;
+        margin-bottom: 50px;
     }
 }
 
-.photo{
-margin: 0 auto;
 
-@media screen and(min-width:768px){
-    display: block;
-}
-}
-.reviews-picture{
+.slider-photo{
    
     @media screen and(min-width:768px){
         padding-right: 46px;
     }
+    @media screen and(min-width:1344px){
+        padding-right: 40px;
+    }
 }
 
-.reviews-description{
+.photo{
+    margin: 0 auto;
+    
+    @media screen and(min-width:768px){
+        display: block;
+    }
+    }
+
+.slider-description{
     display: block;
 
     @media screen and(min-width:768px){
@@ -172,5 +102,128 @@ margin: 0 auto;
         margin: 0;
         width: 706px;
     }
-   
+
+.name{
+    color: var(--accent-color);
+    margin-bottom: 10px;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+
+    
+    @media screen and(min-width:767px){
+        margin-bottom: 20px;  
+    }
+    @media screen and(min-width:1344px){
+        font-size: 30px;
+        
+    }
+}
+
+.text{
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.2;
+    letter-spacing: 0.08em;
+
+    color: var(--secondary-text-color);
+
+    margin: 0;
+    margin-bottom: 10px;
+
+    @media screen and(max-width: 767px){
+        text-align: center;
+        
+    }
+    @media screen and(min-width: 768px){
+        margin-bottom: 20px;
+    }
+
+    @media screen and(min-width:1344px){
+        font-size: 14px;
+    }
+}
+
+.description-text{        
+    margin: 0;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.6;
+
+    @media screen and(min-width:1344px){
+        font-size: 18px;
+        line-height: 1.5;
+    }
+}}
+
+.container{
+    &-icon{
+         background-color: var(--primary-white-color);
+        //  position: absolute;
+        // left: 50%;
+        // transform: translate(-50%);
+         .list{
+            display: flex;
+            justify-content: center;
+            .item{
+                margin-right: 10px;
+
+                @media screen and(min-width:768px) {
+                    margin-right: 30px;
+                }
+
+                &:last-child{
+                    margin-right: 0;
+                }
+            }
+    }}}
+
+    .button{
+        border: none;
+        background-color: transparent;
+
+    }
+
+    // .container-reviews{
+    //     position: relative;
+    // }
+
+.button{
+&-left{
+    // position: absolute;
+
+    // right: 50px;
+    // top: 50%;
+    // background: #FFFFFF;
+    border: none;
+    background: transparent;
+    // // transform: translate(-50%);
+    // transition: fill 250ms var(--timing-fuction);
+    // cursor: pointer;
+
+    }
+    &-right{
+    // position: absolute;
+    // left: 50px;
+    // top: 50%;
+    // border-radius: 50%;
+    // left: 30px;
+    background: transparent;
+    border: none;
+    // // transform: translate(-50%);
+    // transition: fill 250ms var(--timing-fuction);
+    // cursor: pointer;
+       }
+    }
+// .button{
+//     width: 25px;
+//     height: 0;
+// }
+
+.icon-arrow{
+    width: 25px;
+    height:25px;
 }
