--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -55,7 +55,9 @@ ul {
 
 li {
   list-style: none;
-  margin: 0;}
+  margin: 0;
+  padding: 0;
+}
 
 .link {
   text-decoration: none;
@@ -70,11 +72,17 @@ li {
   text-align: center;
 }
 
-
 @media screen and (min-width: 320px) {
-  .section {
+  .section-reviews {
     padding-top: 50px;
     padding-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .section-reviews {
+    padding-top: 130px;
+    padding-bottom: 130px;
   }
 }
 
@@ -86,14 +94,14 @@ li {
 @media screen and (max-width: 319px) {
   .container {
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 }
 
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -120,6 +128,185 @@ li {
   max-width: 1688px;
   color: var(--title-text-color);
   background-color: var(--primary-background-color);
+}
+
+.slider-item {
+  -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+          box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+}
+
+@media screen and (min-width: 320px) {
+  .slider-item {
+    width: 280px;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .slider-item {
+    width: 688px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 40px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .slider-item {
+    width: 1090px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 50px;
+    margin-bottom: 40px;
+  }
+}
+
+.slider .link-reviews {
+  color: var(--accent-color);
+  text-decoration-skip-ink: none;
+}
+
+.slider .logo-vk {
+  margin-top: 26.5px;
+  margin-bottom: 26.5px;
+}
+
+.title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 26px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .title {
+    font-size: 46px;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .slider-photo {
+    padding-right: 46px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .slider-photo {
+    padding-right: 40px;
+  }
+}
+
+.photo {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .photo {
+    display: block;
+  }
+}
+
+.slider-description {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .slider-description {
+    width: 412px;
+    text-align: start;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .slider-description {
+    margin: 0;
+    width: 706px;
+  }
+}
+
+.slider-description .name {
+  color: var(--accent-color);
+  margin-bottom: 10px;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+}
+
+@media screen and (min-width: 767px) {
+  .slider-description .name {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .slider-description .name {
+    font-size: 30px;
+  }
+}
+
+.slider-description .text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: var(--secondary-text-color);
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .slider-description .text {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .slider-description .text {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .slider-description .text {
+    font-size: 14px;
+  }
+}
+
+.slider-description .description-text {
+  margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.6;
+}
+
+@media screen and (min-width: 1344px) {
+  .slider-description .description-text {
+    font-size: 18px;
+    line-height: 1.5;
+  }
 }
 
 .container-icon {
@@ -149,176 +336,39 @@ li {
   margin-right: 0;
 }
 
+.button {
+  border: none;
+  background-color: transparent;
+}
+
 .container-reviews {
-  -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-          box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media screen and (min-width: 320px) {
-  .container-reviews {
-    width: 280px;
-    padding: 20px;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container-reviews {
-    width: 688px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 40px;
-    margin-bottom: 30px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .container-reviews {
-    width: 1090px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-bottom: 40px;
-  }
-}
-
-.container-reviews .link-reviews {
-  color: var(--accent-color);
   position: relative;
-  text-decoration-skip-ink: none;
 }
 
-.container-reviews .logo-vk {
-  margin-top: 26.5px;
-  margin-bottom: 26.5px;
+.button-left {
+  position: absolute;
+  top: 50%;
+  right: 50px;
+  border-radius: 50%;
+  background: #FFFFFF;
+  -webkit-transition: fill 250ms var(--timing-fuction);
+  transition: fill 250ms var(--timing-fuction);
+  cursor: pointer;
 }
 
-.container-reviews .text {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.2;
-  letter-spacing: 0.08em;
-  color: var(--secondary-text-color);
-  margin: 0;
-  margin-bottom: 10px;
+.button-right {
+  position: absolute;
+  top: 50%;
+  left: 50px;
+  border-radius: 50%;
+  background: #FFFFFF;
+  -webkit-transition: fill 250ms var(--timing-fuction);
+  transition: fill 250ms var(--timing-fuction);
+  cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
-  .container-reviews .text {
-    text-align: center;
-  }
+.button {
+  width: 25px;
+  height: 0;
 }
-
-@media screen and (min-width: 768px) {
-  .container-reviews .text {
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .container-reviews .text {
-    font-size: 14px;
-  }
-}
-
-.container-reviews .title {
-  color: var(--accent-color);
-  margin-bottom: 10px;
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.08em;
-}
-
-@media screen and (min-width: 767px) {
-  .container-reviews .title {
-    margin-bottom: 20px;
-    font-size: 20px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .container-reviews .title {
-    margin-bottom: 30px;
-    font-size: 30px;
-  }
-}
-
-.container-reviews .description-text {
-  margin: 0;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.6;
-}
-
-@media screen and (min-width: 1344px) {
-  .container-reviews .description-text {
-    font-size: 18px;
-    line-height: 1.5;
-  }
-}
-
-.title {
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 1.3;
-  letter-spacing: 0.03em;
-  margin: 0;
-  margin-bottom: 20px;
-}
-
-@media screen and (min-width: 768px) {
-  .title {
-    font-size: 26px;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .title {
-    font-size: 46px;
-  }
-}
-
-.photo {
-  margin: 0 auto;
-}
-
-@media screen and (min-width: 768px) {
-  .photo {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .reviews-picture {
-    padding-right: 46px;
-  }
-}
-
-.reviews-description {
-  display: block;
-}
-
-@media screen and (min-width: 768px) {
-  .reviews-description {
-    width: 412px;
-    text-align: start;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-@media screen and (min-width: 1344px) {
-  .reviews-description {
-    margin: 0;
-    width: 706px;
-  }
-}
-
 /*# sourceMappingURL=main.css.map */
